skybox + bug fixes + level 7 started (not finished, plz don't be good at the game)

--- a/vercel.json
+++ b/vercel.json
@@ -24,5 +24,6 @@
         { "key": "Cache-Control", "value": "no-store" }
       ]
     }
-  ]
+  ],
+  "buildCommand": "git lfs install && git lfs pull && npm run build"
 }
