--- a/vercel.json
+++ b/vercel.json
@@ -24,6 +24,7 @@
         { "key": "Cache-Control", "value": "no-store" }
       ]
     }
-  ]
+  ],
+  "buildCommand": "git lfs install && git lfs pull"
 }
 
