--- a/vercel.json
+++ b/vercel.json
@@ -5,8 +5,7 @@
       "headers": [
         { "key": "Content-Encoding", "value": "gzip" },
         { "key": "Content-Type", "value": "application/javascript" },
-        { "key": "Cache-Control", "value": "no-store" },
-        { "key": "Cross-Origin-Resource-Policy", "value": "cross-origin" }
+        { "key": "Cache-Control", "value": "no-store" }
       ]
     },
     {
@@ -14,8 +13,7 @@
       "headers": [
         { "key": "Content-Encoding", "value": "gzip" },
         { "key": "Content-Type", "value": "application/wasm" },
-        { "key": "Cache-Control", "value": "no-store" },
-        { "key": "Cross-Origin-Resource-Policy", "value": "cross-origin" }
+        { "key": "Cache-Control", "value": "no-store" }
       ]
     },
     {
@@ -23,8 +21,7 @@
       "headers": [
         { "key": "Content-Encoding", "value": "gzip" },
         { "key": "Content-Type", "value": "application/octet-stream" },
-        { "key": "Cache-Control", "value": "no-store" },
-        { "key": "Cross-Origin-Resource-Policy", "value": "cross-origin" }
+        { "key": "Cache-Control", "value": "no-store" }
       ]
     }
   ]
