--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,13 @@
 {
   "headers": [
     {
+      "source": "/:path*",
+      "headers": [
+        { "key": "Cross-Origin-Resource-Policy", "value": "cross-origin" },
+        { "key": "Cross-Origin-Embedder-Policy", "value": "credentialless" }
+      ]
+    },
+    {
       "source": "/Build/(.*)\\.js\\.gz",
       "headers": [
         { "key": "Content-Encoding", "value": "gzip" },
