i am stupid, i am stupid

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "headers": [
     {
-      "source": "/:path*",
+      "source": "/(.*)",
       "headers": [
         { "key": "Cross-Origin-Resource-Policy", "value": "cross-origin" },
         { "key": "Cross-Origin-Embedder-Policy", "value": "credentialless" }
